Fix <code> blogs to be left aligned always

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -345,6 +345,8 @@ pre {
     overflow: auto;
     background: #F7FAFB;
     border-radius: 3px;
+    direction: ltr;
+    text-align: left;
 }
 
 pre code, tt {
